Stripped out css classes from old site content

--- a/content/en/work-with-us/positions/head-of-engineering.html
+++ b/content/en/work-with-us/positions/head-of-engineering.html
@@ -5,10 +5,10 @@ aliases: [/head-of-engineering/,/chef-de-l-ingenierie/]
 archived: false
 postingtype: "senior-job-post"
 ---
-<section class="section page--outer-container-padding">
-	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1 col-xs-12">
-			<h2 class="section--title">We're Hiring</h2>
+<section>
+	<div>
+		<div>
+			<h2>We're Hiring</h2>
 			<p>The Canadian Digital Service (CDS) works with federal departments to make the services people depend on simple and easy-to-use. We’re a small but mighty team that is rethinking service design and delivery, engaging users every step of the way. By working in the open, and connecting partners with tools, talent, and training grounded in practice, we’re building capacity across the government for better service delivery. And we need you.</p>
 			<p>We’re looking for someone to lead our engineering team. As the head of engineering, you’ll set the vision and tone, shape our technical direction and choices, assess our needs and recruit to fulfill them, and support the team’s learning and development. You and your team will help ensure CDS and its partners are building meaningful, accessible, inclusive, and secure services, in the open, and help those partners prepare to own, maintain and continuously improve the services we deliver with them. You’ll drive CDS and its partners to take advantage of and develop reusable code, tools, and resources. You’ll advise partners across government on hard technology decisions, bringing agile practices and culture to legacy systems. You’ll solve technology roadblocks while navigating the rules — and help us rewrite those rules when necessary to modernize how government accommodates delivery. You’ll push the limits of what’s possible for a government that serves 37 million people.</p>
 
