--- a/content/en/work-with-us/positions/head-of-talent.html
+++ b/content/en/work-with-us/positions/head-of-talent.html
@@ -4,9 +4,9 @@ description: "We’re looking for someone to lead our talent operations. In this
 archived: true
 posting-type: "senior-job-post"
 ---
-<section class="section page--outer-container-padding">
-	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1 col-xs-12">
+<section>
+	<div>
+		<div>
 			<p>Thank you for your interest in our mission and in this position. This process is unfortunately now closed, but we are still <a href="https://digital.canada.ca/work-with-us/">looking for talented, passionate, and driven people</a> to work on some of Canada’s biggest service delivery opportunities.</p>
 		</div>
 	</div>
