--- a/content/fr/work-with-us/positions/chef-de-cabinet.html
+++ b/content/fr/work-with-us/positions/chef-de-cabinet.html
@@ -4,9 +4,9 @@ description: "Nous sommes à la recherche d’une personne pour soutenir notre d
 archived: true
 postingtype: "senior-job-post"
 ---
-<section class="section page--outer-container-padding">
-	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1 col-xs-12">
+<section>
+	<div>
+		<div>
 			<p>Merci de votre intérêt pour notre mission et pour ce poste. Même si la période de candidature est terminée pour ce poste, nous sommes toujours <a href="https://numerique.canada.ca/travaillez-avec-nous/">à la recherche de personnes talentueuses, passionnées et résolues</a> à relever les principaux défis de prestation de services au Canada</p>
 		</div>
 	</div>
