--- a/content/fr/work-with-us/positions/gestionnaire-de-produits.html
+++ b/content/fr/work-with-us/positions/gestionnaire-de-produits.html
@@ -6,10 +6,10 @@ aliases: [/product-manager/]
 postingType: "job-post"
 
 ---
-<section class="section page--outer-container-padding">
-	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1 col-xs-12">
-			<h2 class="section--title">Aider à transformer les services publics pour les Canadiens</h2>
+<section>
+	<div>
+		<div>
+			<h2>Aider à transformer les services publics pour les Canadiens</h2>
             
 			<p>Le Service numérique canadien (SNC) est un collectif de personnes créatives, résolues à utiliser nos compétences et nos connaissances numériques pour rendre les services gouvernementaux plus accessibles et plus faciles à utiliser.</p>
 
