Title bars, blog post lists, consistent styling

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,6 +1,7 @@
 ---
 title: 'Home'
 type: section
+title: home
 ---
 <div class="container">
     <section class="section homepage--intro page-intro--outer-container-padding">
