--- a/content/en/our-team.html
+++ b/content/en/our-team.html
@@ -1,8 +1,8 @@
 ---
 type: section
-layout: our-team
+layout: page
+title: our-team
 aliases: [/notre-equipe/]
-lang: "en"
 ---
 
 <div class="container">
