--- a/content/en/what-we-do.html
+++ b/content/en/what-we-do.html
@@ -1,7 +1,8 @@
 ---
 type: section
-title: what-we-do
 layout: page
+image: how-we-work.jpg
+title: what-we-do
 aliases: [/ce-que-nous-faisons/]
 ---
 
