--- a/content/en/work-with-us/positions/product-manager.html
+++ b/content/en/work-with-us/positions/product-manager.html
@@ -4,12 +4,13 @@ description: "The Product Manager role at CDS is a career-defining opportunity f
 aliases: ['/gestionnaire-de-produits/']
 archived: false
 layout: page
+type: section
 postingtype: "job-post"
 ---
-<section>
-	<div>
-		<div>
-			<h2>Help transform public services for Canadians</h2>
+<section class="section page--outer-container-padding">
+    <div class="row">
+        <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+			<h2 class="section--title">Help transform public services for Canadians</h2>
             
 			<p>The Canadian Digital Service is a collective of creative people committed to using our digital skills and knowledge to make it easier to access and use government services.</p>
 
