--- a/content/fr/work-with-us/positions/chef-de-l-ingenierie.html
+++ b/content/fr/work-with-us/positions/chef-de-l-ingenierie.html
@@ -4,11 +4,13 @@ description: "Nous sommes à la recherche d’une personne pour diriger notre é
 aliases: [/head-of-engineering/]
 archived: false
 postingType: "senior-job-post"
+type: section
+layout: page
 ---
-<section>
-	<div>
-		<div>
-			<h2>Nous embauchons</h2>
+<section class="section page--outer-container-padding">
+	<div class="row">
+		<div class="col-sm-10 col-sm-offset-1 col-xs-12">
+			<h2 class="section--title">Nous embauchons</h2>
 			<p>Le Service numérique canadien (SNC), en collaboration avec les ministères fédéraux, élabore des services simples et faciles sur lesquels compte la population. Nous sommes une petite équipe, mais une équipe puissante qui repense la conception et la prestation des services, en assurant la participation des utilisateurs à chaque étape. En travaillant ouvertement et en établissant des liens entre les partenaires et les outils, les talents et la formation fondée sur la pratique, le SNC renforce les capacités à l’échelle du gouvernement afin d’améliorer la prestation des services. Et nous avons besoin de vous.</p>
 			<p>Nous sommes à la recherche d’une personne pour diriger notre équipe d’ingénierie. À ce titre, vous serez responsable d’établir la vision et le ton, de façonner notre orientation et nos choix techniques, d’évaluer nos besoins et de recruter du personnel pour répondre à ces besoins, ainsi que d’appuyer l’apprentissage et le perfectionnement de l’équipe. Vous et votre équipe contribuerez à faire en sorte que le SNC et ses partenaires mettent en place, de manière ouverte, des services efficaces, accessibles, inclusifs et sécurisés, et vous aiderez ces partenaires à se préparer à héberger, à maintenir et à améliorer de façon continue les services conçus ensemble. Vous aiderez le SNC et ses partenaires à tirer parti des codes, d’outils et de ressources réutilisables ainsi qu’à les développer. Vous conseillerez les partenaires du gouvernement relativement à des décisions technologiques difficiles et à l’intégration d’une culture et de pratiques agiles aux systèmes existants. Vous résoudrez les obstacles technologiques, tout en navigant à travers les règles, et vous nous aiderez à changer règles, au besoin, afin de moderniser la façon dont le gouvernement assure la prestation des services. Vous repousserez les limites de ce qui est possible pour un gouvernement qui sert 37 millions de personnes.</p>
 
