Fixed language switcher

--- a/content/en/legal/privacy-notice.html
+++ b/content/en/legal/privacy-notice.html
@@ -5,6 +5,7 @@ image: contact.jpg
 type: section
 layout: page
 url: /legal/privacy-notice/
+aliases: [/transparence/enonce-de-confidentialite/]
 ---
 <section class="section page-privacy-notice page--outer-container-padding">
 	<div class="row">
