Job posting page updates: Making them manageable in Netlify CMS; switching posts to markdown

--- a/content/fr/work-with-us/positions/chef-de-cabinet.html
+++ b/content/fr/work-with-us/positions/chef-de-cabinet.html
@@ -2,9 +2,8 @@
 title: "Chef de cabinet"
 description: "Nous sommes à la recherche d’une personne pour soutenir notre dirigeant principal et notre équipe de la haute direction. De la simplification d’activités réalisées dans un bureau à volume élevé à la coordination de l’exécution d’initiatives stratégiques, vous veillerez à ce que les priorités du dirigeant principal restent sur la bonne voie et se concrétisent."
 archived: true
-postingtype: "senior-job-post"
 type: section
-layout: page
+layout: job-posting
 ---
 <section class="section page--outer-container-padding">
 	<div class="row">
