--- a/content/fr/work-with-us/positions/gestionnaire-de-produits.html
+++ b/content/fr/work-with-us/positions/gestionnaire-de-produits.html
@@ -1,11 +1,11 @@
 ---
 title: "Gestionnaire de produits"
 description: "Le rôle constitue une occasion déterminante dans une carrière pour une personne passionnée par l’utilisation de la gestion de produits afin de transformer les services publics au sein d’une équipe d’ingénieurs, de concepteurs et de chercheurs de calibre international qui ont une vision commune de créer de meilleurs services publics au Canada."
-archived: false
+archived: true
 aliases: [/product-manager/]
-postingType: "job-post"
+url: [/gestionnaire-de-produits/]
 type: section
-layout: page
+layout: job-posting
 
 ---
 <section class="section page--outer-container-padding">
