--- a/content/en/work-with-us/positions/product-manager.html
+++ b/content/en/work-with-us/positions/product-manager.html
@@ -2,10 +2,9 @@
 title: "Product Manager"
 description: "The Product Manager role at CDS is a career-defining opportunity for someone passionate about using product management to transform public services as part of a world-class team of engineers, designers, and researchers who share a vision of better public services in Canada."
 aliases: ['/gestionnaire-de-produits/']
-archived: false
+archived: true
 layout: page
 type: section
-postingtype: "job-post"
 ---
 <section class="section page--outer-container-padding">
     <div class="row">
